syntax = "proto2";

option objc_class_prefix = "WK";

package proto;

message Meaning {
  optional string meaning = 1;
  optional bool is_primary = 2;
}

message Reading {
  optional string reading = 1;
  optional bool is_primary = 2;

  enum Type {
    ONYOMI = 1;
    KUNYOMI = 2;
    NANORI = 3;
  }
  optional Type type = 3;
}

message Radical {
  optional string japanese = 1;
  repeated Meaning meanings = 2;
  optional string character_image = 3;

  optional string mnemonic = 4;
}

message Kanji {
  optional string japanese = 1;
  repeated Reading readings = 2;
  repeated Meaning meanings = 3;

  optional string meaning_mnemonic = 4;
  optional string meaning_hint = 5;
  optional string reading_mnemonic = 6;
  optional string reading_hint = 7;

  repeated int32 component_subject_ids = 8;
}

message Vocabulary {
  optional string japanese = 1;
  repeated Reading readings = 2;
  repeated Meaning meanings = 3;

  optional string meaning_explanation = 4;
  optional string reading_explanation = 5;

  message Sentence {
    optional string japanese = 1;
    optional string english = 2;
  }
  repeated Sentence sentences = 6;

  repeated int32 component_subject_ids = 7;

  enum PartOfSpeech {
    NOUN = 1;
    NUMERAL = 2;
    INTRANSITIVE_VERB = 3;
    ICHIDAN_VERB = 4;
    TRANSITIVE_VERB = 5;
    NO_ADJECTIVE = 6;
    GODAN_VERB = 7;
    NA_ADJECTIVE = 8;
    I_ADJECTIVE = 9;
    SUFFIX = 10;
    ADVERB = 11;
    SURU_VERB = 12;
    PREFIX = 13;
    PROPER_NOUN = 14;
    EXPRESSION = 15;
    ADJECTIVE = 16;
    INTERJECTION = 17;
    COUNTER = 18;
    PRONOUN = 19;
    CONJUNCTION = 20;
  }
  repeated PartOfSpeech parts_of_speech = 8;

  optional string audio = 9;
}

message Subject {
  optional int32 id = 1;
  optional int32 level = 2;
  optional string slug = 3;
  optional string document_url = 4;

  enum Type {
    RADICAL = 1;
    KANJI = 2;
    VOCABULARY = 3;
  }

  optional Radical radical = 5;
  optional Kanji kanji = 6;
  optional Vocabulary vocabulary = 7;
}

message Assignment {
  optional int32 id = 1;
  optional int32 level = 2;

  optional int32 subject_id = 3;
  optional Subject.Type subject_type = 4;
  optional int32 available_at = 5;
  optional int32 started_at = 6;
  optional int32 srs_stage = 7;
}

message Progress {
  optional int32 id = 1;
  optional bool meaning_wrong = 2;
  optional bool reading_wrong = 3;
}

message StudyMaterials {
  optional int32 id = 1;
  optional int32 subject_id = 2;
  optional string meaning_note = 3;
  optional string reading_note = 4;
  repeated string meaning_synonyms = 5;
}

message User {
  optional string username = 1;
  optional int32 level = 2;
  optional int32 max_level_granted_by_subscription = 3;
  optional string profile_url = 4;
  optional int32 started_at = 5;
  optional bool subscribed = 6;
}

